crates/parser/src/snapshots/parser__tests__err_test@0012_make_vector_expr_no_phrase.ath.snap
---
source: crates/parser/src/tests.rs
description: "make-vector foo\n"
input_file: crates/parser/test_data/parser/inline/err/expr/0012_make_vector_expr_no_phrase.ath
---
MAKE_VECTOR_EXPR
  MAKE_VECTOR_KW "make-vector"
  WHITESPACE " "
  IDENT_EXPR
    IDENTIFIER
      IDENT "foo"
      WHITESPACE "\n"
error 16: Expected to find a value (phrase) for the make_vector expression

