crates/parser/src/snapshots/parser__tests__err_test@0016_vector_set_expr_no_expr.ath.snap
---
source: crates/parser/src/tests.rs
description: "vector-set!\n"
input_file: crates/parser/test_data/parser/inline/err/expr/0016_vector_set_expr_no_expr.ath
---
VECTOR_SET_EXPR
  VECTOR_SETBANG_KW "vector-set!"
  WHITESPACE "\n"
error 12: Expected to find a target vector expression for the vector-set! expression
error 12: Expected to find an index (expr) for the vector-set! expression
error 12: Expected to find a value (phrase) for the vector-set! expression

